Completed Forked Engine Configuration

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ GauntletEditor/Library/
 GauntletEditor/Logs/
 Gauntlet Game/Game/.vs/
 Gauntlet Game/Game/Intermediate/
+Gauntlet Game/Game/Build/bin/
