Added Game Project Engine and UI Manager... Also added default setup in assets folder

--- a/Gauntlet Game/Game/Game/Game.vcxproj
+++ b/Gauntlet Game/Game/Game/Game.vcxproj
@@ -166,10 +166,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GauntletEngine.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="UIManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameCore.h" />
+    <ClInclude Include="GauntletEngine.h" />
+    <ClInclude Include="UIManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
