Added Player Enemy and Projectile also added rudimentary code of firing the projectile from both player and enemy...

--- a/Gauntlet Game/Game/Game/Game.vcxproj
+++ b/Gauntlet Game/Game/Game/Game.vcxproj
@@ -166,13 +166,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Button.cpp" />
+    <ClCompile Include="CameraManager.cpp" />
     <ClCompile Include="GauntletEngine.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Rectangle.cpp" />
     <ClCompile Include="UIManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Button.h" />
+    <ClInclude Include="CameraManager.h" />
     <ClInclude Include="GameCore.h" />
     <ClInclude Include="GauntletEngine.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="Rectangle.h" />
     <ClInclude Include="UIManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
